--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pipenv
+        pipenv shell
         pipenv install -r requirements.txt
     - name: Run Tests
       run: |
