--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,23 +13,20 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
+        python-version: 3.9
+    - name: Install pipenv
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: pipenv
-      run: |
-        python -m pip install --upgrade pip
         python -m pip install pipenv
-        pipenv install -r requirements.txt
+    - name: Create virtual environment with dependencies
+      run: |
+        python -m pipenv install
     - name: Run Tests
       run: |
         python manage.py test
