--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,9 +24,9 @@ jobs:
     - name: Install pipenv
       run: |
         python -m pip install pipenv
-    - name: Create virtual environment with dependencies
-      run: |
-        python -m pipenv install
-    - name: Run Tests
-      run: |
-        python manage.py test
+    # - name: Create virtual environment with dependencies
+    #   run: |
+    #     python -m pipenv install
+    # - name: Run Tests
+    #   run: |
+    #     python manage.py test
