--- a/Pipfile
+++ b/Pipfile
@@ -7,13 +7,14 @@ name = "pypi"
 asgiref = "==3.5.0"
 dj-database-url = "==0.5.0"
 django-heroku = "*"
+django = "==4.0.2"
 django-environ = "==0.8.1"
 psycopg2 = "==2.9.3"
 psycopg2-binary = "==2.9.3"
 pytz = "==2021.3"
 sqlparse = "==0.4.2"
 whitenoise = "==6.0.0"
-Django = "==4.0.2"
+gunicorn = "*"
 
 [dev-packages]
 
