--- a/Pipfile
+++ b/Pipfile
@@ -15,8 +15,9 @@ pytz = "==2021.3"
 sqlparse = "==0.4.2"
 whitenoise = "==6.0.0"
 gunicorn = "*"
+djangorestframework = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.8"
