--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,4 +29,7 @@ jobs:
         python -m pipenv install
     - name: Run Tests
       run: |
-        python manage.py test
+        pipenv run python manage.py test
+    - name: Run migrations
+      run: |
+        pipenv run python manage.py migrate
