--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,28 @@
-Package                   Version
-------------------------- ---------
-asgiref                   3.5.0
-backports.zoneinfo        0.2.1
-bleach                    5.0.1
-certifi                   2022.6.15
-charset-normalizer        2.1.0
-cloudinary                1.29.0
-dj-database-url           0.5.0
-Django                    4.0.2
-django-cloudinary-storage 0.3.0
-django-cors-headers       3.11.0
-django-environ            0.8.1
-django-heroku             0.3.1
-django-summernote         0.8.20.0
-djangorestframework       3.13.1
-gunicorn                  20.1.0
-idna                      3.3
-Pillow                    9.2.0
-pip                       22.2.2
-psycopg2                  2.9.3
-psycopg2-binary           2.9.3
-pytz                      2021.3
-requests                  2.28.1
-setuptools                63.4.1
-six                       1.16.0
-sqlparse                  0.4.2
-urllib3                   1.26.11
-webencodings              0.5.1
-wheel                     0.37.1
-whitenoise                6.0.0
+asgiref==3.5.0
+backports.zoneinfo==0.2.1
+bleach==5.0.1
+certifi==2022.6.15
+charset-normalizer==2.1.0
+cloudinary==1.29.0
+dj-database-url==0.5.0
+Django==4.0.2
+django-cloudinary-storage==0.3.0
+django-cors-headers==3.11.0
+django-environ==0.8.1
+django-heroku==0.3.1
+django-summernote==0.8.20.0
+djangorestframework==3.13.1
+gunicorn==20.1.0
+idna==3.3
+install==1.3.5
+Pillow==9.2.0
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
+python-magic==0.4.27
+pytz==2021.3
+requests==2.28.1
+six==1.16.0
+sqlparse==0.4.2
+urllib3==1.26.11
+webencodings==0.5.1
+whitenoise==6.0.0
